alarm-manager/request.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-check
  namespace: alarm-manager
spec:
  selector:
    matchLabels:
      app: alarm-manager
  jwtRules:
    - issuer: "http://10.63.33.181:32569/realms/AuthTest"
      jwksUri: "http://10.63.33.181:32569/realms/AuthTest/protocol/openid-connect/certs"
