alarm-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alarm-manager-service
  namespace: alarm-manager
spec:
  type: NodePort
  selector:
    app: alarm-manager
  ports:
    - port: 8080
      targetPort: 8080
