alarm-manager/virtaulService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alarm-manager-virtualservice
  namespace: alarm-manager
spec:
  hosts:
  - "alarm.example.com"  # replace with your actual hostname
  gateways:
  - alarm-manager-gateway
  http:
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host: alarm-manager-service.alarm-manager.svc.cluster.local
          port:
            number: 8080
      rewrite:
        uri: "/"
        authority: alarm-manager-service.alarm-manager.svc.cluster.local:8080
